--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Tailwind CSS</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
 
@@ -52,7 +52,7 @@
         </div>
         <div class="w-full self-end px-4 lg:w-1/2 lg:pl-60">
           <div class="relative mt-10 lg:mt-0 lg:right-0"> 
-            <img src="img/andi.png" alt="Andi" class="max-w-full mx-auto">
+            <img src="public/img/andi.png" alt="Andi" class="max-w-full mx-auto">
             <span class="absolute top-0 left-1/2 -z-10 -translate-x-1/2 ">
               <svg width="330" height="350" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                 <path fill="#f43f5e" d="M54.2,-18.2C60,0.1,47.3,23.9,28.7,36.7C10.1,49.6,-14.3,51.5,-33.4,39.2C-52.4,27,-66,0.6,-59.6,-18.7C-53.1,-38,-26.5,-50.1,-1.2,-49.7C24.2,-49.3,48.4,-36.5,54.2,-18.2Z" transform="translate(100 100) scale(1.2)" />
@@ -128,28 +128,28 @@
       <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="./img/1.jpg" alt="Landing Page" width="w-full">
+            <img src="public/img/1.jpg" alt="Landing Page" width="w-full">
           </div>
           <h3 class="font-semibold text-xl text-dark mt-5">Landing Page Andi Sujaya</h3>
           <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quos. Sunt tempore numquam in ab!</p>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="./img/2.jpg" alt="E-Commerce" width="w-full" class="my-image-size"> 
+            <img src="public/img/2.jpg" alt="E-Commerce" width="w-full" class="my-image-size"> 
           </div>
           <h3 class="font-semibold text-xl text-dark mt-5">E-Commerce</h3>
           <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quos. Sunt tempore numquam in ab!</p>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="./img/3.jpg" alt="Technical Documentation" width="w-full">
+            <img src="public/img/3.jpg" alt="Technical Documentation" width="w-full">
           </div>
           <h3 class="font-semibold text-xl text-dark mt-5">Technical Documentation</h3>
           <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quos. Sunt tempore numquam in ab!</p>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="./img/4.jpg" alt="Tribute Page" width="w-full">
+            <img src="public/img/4.jpg" alt="Tribute Page" width="w-full">
           </div>
           <h3 class="font-semibold text-xl text-dark mt-5">Tribute Page</h3>
           <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quos. Sunt tempore numquam in ab!</p>
@@ -174,16 +174,16 @@
       <div class="w-full px-4">
         <div class="flex flex-wrap items-center justify-center">
           <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-            <img src="./img/clients/google.png" alt="google">
+            <img src="public/img/clients/google.png" alt="google">
           </a>
           <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-            <img src="./img/clients/Shopee.svg" alt="shopee">
+            <img src="public/img/clients/Shopee.svg" alt="shopee">
           </a>
           <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-            <img src="./img/clients/gojek.png" alt="gojek">
+            <img src="public/img/clients/gojek.png" alt="gojek">
           </a>
           <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-            <img src="./img/clients/tokopedia.svg" alt="tokopedia">
+            <img src="public/img/clients/tokopedia.svg" alt="tokopedia">
           </a>
         </div>
       </div>
@@ -205,7 +205,7 @@
       <div class="flex flex-wrap">
         <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
           <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-            <img src="./img/blog/1.jpg" alt="programming" class="w-full object-cover">
+            <img src="public/img/blog/1.jpg" alt="programming" class="w-full object-cover">
             <div class="py-8 px-4">
               <h3>
                 <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Tips to Learn Programming</a>
@@ -217,7 +217,7 @@
         </div>
         <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
           <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-            <img src="./img/blog/2.jpg" alt="Android" class="w-full object-cover">
+            <img src="public/img/blog/2.jpg" alt="Android" class="w-full object-cover">
             <div class="py-8 px-4">
               <h3>
                 <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Android 17 Update!</a>
@@ -229,7 +229,7 @@
         </div>
         <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
           <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-            <img src="./img/blog/3.jpg" alt="Coffee" class="w-full object-cover">
+            <img src="public/img/blog/3.jpg" alt="Coffee" class="w-full object-cover">
             <div class="py-8 px-4">
               <h3>
                 <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Tasting a Good Coffee</a>
@@ -364,6 +364,6 @@
   </footer>
   <!-- Footer End -->
 
-  <script src="js/script.js"></script>
+  <script src="public/js/script.js"></script>
 </body>
 </html>
