Adding list of education in writing category in footer

--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
             <li>
               <a href="#" class="inline-block text-base hover:text-primary mb-3">Lifestyle</a>
             </li>
+            <li>
+              <a href="#" class="inline-block text-base hover:text-primary mb-3">Education</a>
+            </li>
           </ul>
         </div>
         <div class="w-full px-4 mb-12 md:w-1/3">
